修改文件: 2018-10-24SPFA判负环.md

--- a/2018-10-24SPFA判负环.md
+++ b/2018-10-24SPFA判负环.md
@@ -3,7 +3,7 @@ title: 2018-10-24SPFA判负环
 tags: SPFA,图论,模板
 grammar_cjkRuby: true
 ---
-
+[link](https://www.luogu.org/problemnew/show/P3385)
 
 ```cpp
 /*
