修改文件: 2018-10-26Tarjan无向图求桥.md

--- a/2018-10-26Tarjan无向图求桥.md
+++ b/2018-10-26Tarjan无向图求桥.md
@@ -3,7 +3,7 @@ title: 2018-10-26Tarjan无向图求桥
 tags: Tarjan
 grammar_cjkRuby: true
 ---
-
+[link](http://acm.hdu.edu.cn/showproblem.php?pid=4738)
 # 注意一定要清空数组
 
 解题思路:   首先判断图是否连通，不连通则不需要去炸桥，输出0
