修改文件: 2018-10-30[NOIP]换教室.md

--- a/2018-10-30[NOIP]换教室.md
+++ b/2018-10-30[NOIP]换教室.md
@@ -4,6 +4,38 @@ tags: 概率,DP
 grammar_cjkRuby: true
 ---
 
+还有极大值极小值
+
+>**int**
+”较“的原则：加法不爆。 
+极大值：0x7f 
+较大值：0x3f 
+较小值：0xc0 
+极小值：0x80
+
+>**long long**
+”较“的原则：加法不爆。 
+极大值：0x7f 
+较大值：0x3f 
+较小值：0xc0 
+极小值：0x80
+
+>**float**
+”较“的原则：保证一定位精度。 
+7f以上一直到be都是-0 (实际上是一个很小的>-1.0的负数) 
+极大值：0x7f 
+较大值：0x4f 
+较小值：0xce 
+极小值：0xfe 
+0xff是 -1.#QNAN0000…… (-∞？)
+
+>**double**
+”较“的原则：保证一定位精度。 
+极大值：0x7f 
+较大值：0x43 
+较小值：0xc2 
+极小值：0xfe
+
 自己一开始有这样的思路，但是不够灵光，下次做这类题应该大胆设想！
 
 还有就是需要考虑弗洛伊德的重边情况，要选择最小的边！！！！
