修改文件: 2018-10-30Demo.md

--- a/2018-10-30Demo.md
+++ b/2018-10-30Demo.md
@@ -77,3 +77,60 @@ int main(){
 	return 0;
 }
 ```
+
+```cpp
+#include<cstdio>
+int n,ans[10000];
+bool check(int x){
+	int tmp = 0;
+	int t = x;
+	while(t){
+		tmp += t % 10;
+		t /= 10;
+	}
+	return n == (x + tmp);
+}
+int main(){
+	scanf("%d",&n);
+	int size = 0;
+	for(int i = 1;i <= n;i++){
+		if(check(i)){
+			ans[++size] = i;
+		}
+	}
+	printf("%d\n",size);
+	for(int i = 1;i <= size;i++){
+		printf("%d\n",ans[i]);
+	}
+	return 0;
+}
+```
+
+```cpp
+#include<cstdio>
+#define max(a,b) (a > b ? a : b)
+typedef long long ll;
+ll n,ans[1000];
+bool check(ll x){
+	int tmp = 0;
+	ll t = x;
+	while(t){
+		tmp += t % 10;
+		t /= 10;
+	}
+	return n == (x + tmp);
+}
+int main(){
+	scanf("%lld",&n);
+	int size = 0;
+	for(ll i = max(n - 1000,0);i <= n;i++){
+		if(check(i)){
+			ans[++size] = i;
+		}
+	}
+	printf("%d\n",size);
+	for(int i = 1;i <= size;i++)
+		printf("%lld\n",ans[i]);
+	return 0;
+}
+```
