--- a/并查集学习笔记.md
+++ b/并查集学习笔记.md
@@ -11,7 +11,7 @@ grammar_cjkRuby: true
 解决一些在并查集上距离的问题，可以采用记录d[x]表示到根节点的距离，也就是带比边权并查集的方法。
 
 [NOI2002银河英雄传说](https://www.luogu.org/problemnew/show/P1196)
-```cpp?linenums
+```cpp
 int find(int x){
 	if(x == fa[x])
 		return x;
