修改文件: 2018-10-31最短路和最小生成树的综合应用.md

--- a/2018-10-31最短路和最小生成树的综合应用.md
+++ b/2018-10-31最短路和最小生成树的综合应用.md
@@ -1,9 +1,14 @@
 ---
-title: 2018-10-31最短路和最小生成树的综合应用
+title: 2018-10-31最短路径生成树
 tags: 最短路,最小生成树
 grammar_cjkRuby: true
 ---
 [link](https://loj.ac/problem/10064)
+
+**最短路径生成树介绍**
+
+> 最短路径生成树是一棵树，它的根节点为S，在这棵树上跑dijkstra与在原图上跑得到的d会是完全一样的。
+> 这棵树的生成可以用dijkstra来理解。每个未被标记的节点把d推priority_queue，取出堆顶x，x先被标记。然后更新与x相连的节点，如果有d[y]>d[x]+e[k].c，那么把y节点以及k这条边一起选入预定的最小路径生成树。当y被标记时，这条预定的边变成实际的最小路径生成树的一条边。 再理解一下，dijkstra看似随机的从priority_queue中随机的取点，实际上它取的点还是有原则的。画一个图出来，YY一下，可以发现dijkstra的扩展路径就是一棵树，（很满足树的特性，一个点有很多个孩子节点，每个点只有一个父亲……）把这棵树提取出来便是最小路径生成树啦。
 
 这道题是求最小生成树的
 
